package Project.Classes.Maintypes;

public abstract class User {
}
