package Project.Interfaces;

public interface IBuyers {
    void addToCart();

    void removeFromCart();

    void viewCart();

    void checkout();
}
