package Project.Interfaces;

public interface IUsers {
    void register();

    void login();

    void logout();

    void viewUser();

    void updateUser();

    void viewMovie();

    void viewTransactions();

    void viewInventory();

    void deleteUser();
}